--- a/websites/css/schedule.css
+++ b/websites/css/schedule.css
@@ -7,25 +7,46 @@
     grid-gap: 1em;
     grid-template-rows:
       [days] auto
-      [time-0900] 1fr
+      [time-0900] 2fr
+      [time-0920] 1fr
       [time-0930] 1fr
-      [time-1000] 1fr
+      [time-0940] 0.5fr
+      [time-0945] 1.5fr
+      [time-1000] 1.5fr
+      [time-1015] 0.5fr
+      [time-1020] 1fr
       [time-1030] 1fr
-      [time-1100] 1fr
+      [time-1040] 1fr
+      [time-1100] 2fr
+      [time-1115] 1.5fr
       [time-1130] 1fr
-      [time-1200] 1fr
+      [time-1140] 2fr
+      [time-1200] 2fr
+      [time-1220] 1fr
       [time-1230] 1fr
-      [time-1300] 1fr
-      [time-1330] 1fr
+      [time-1240] 2fr
+      [time-1300] 3fr
+      [time-1330] 2fr
+      [time-1350] 1fr
       [time-1400] 1fr
+      [time-1410] 1fr
+      [time-1420] 1fr
       [time-1430] 1fr
+      [time-1440] 1fr
+      [time-1450] 1fr
       [time-1500] 1fr
-      [time-1530] 1fr
-      [time-1600] 1fr
-      [time-1630] 1fr
-      [time-1700] 1fr
+      [time-1510] 1fr
+      [time-1520] 1fr
+      [time-1530] 1.5fr
+      [time-1545] 1.5fr
+      [time-1600] 1.5fr
+      [time-1615] 0.5fr
+      [time-1620] 1fr
+      [time-1630] 3fr
+      [time-1700] 3fr
       [time-1730] 1fr
-      [time-1800] 1fr;
+      [time-1830] 1fr
+      [time-2130] 1fr;
       /* Note 1:
       Use 24hr time for gridline names for simplicity
 
@@ -91,12 +112,9 @@
 
 .session-title,
 .session-subtitle,
+.session-presenter,
 .session-time {
   display: block;
-}
-
-.session-presenter {
-  display: none;  /* currently not in use */
 }
 
 .session-title {
@@ -142,6 +160,11 @@
 .topic-misc {
   background-color: #544D69;
   color: #fff;
+}
+
+.online {
+  opacity: 0.8;
+  background: repeating-linear-gradient( -45deg, #444cf7, #444cf7 5px, #1259B2 5px, #1259B2 25px );
 }
 
 .day-hidden,
